--- a/PracticeTesting/test-output/old/Default suite/methods.html
+++ b/PracticeTesting/test-output/old/Default suite/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="defd9f">  <td>25/07/16 07:39:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testCheckoutInformationFormSubmission()[pri:0, instance:testcase.LoginTest@1ab3a8c8]">testCheckoutInformationFormSubmission</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a37dbf">  <td>25/07/16 07:39:23</td>   <td>2473</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcase.LoginTest@1ab3a8c8]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a3cd93">  <td>25/07/20 11:27:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcase.LoginTest@1afd44cb]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="defd9f">  <td>25/07/16 07:39:19</td>   <td>-1111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testAddBackpackToCartAndCheckout()[pri:0, instance:testcase.LoginTest@1ab3a8c8]">testAddBackpackToCartAndCheckout</td> 
+<tr bgcolor="d46ab7">  <td>25/07/20 11:28:01</td>   <td>10184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testInvalidLogin()[pri:1, instance:testcase.LoginTest@1afd44cb]">testInvalidLogin</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="defd9f">  <td>25/07/16 07:39:23</td>   <td>2418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testInvalidLogin()[pri:2, instance:testcase.LoginTest@1ab3a8c8]">testInvalidLogin</td> 
+<tr bgcolor="d46ab7">  <td>25/07/20 11:27:54</td>   <td>3875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testAddBackpackToCartAndCheckout()[pri:0, instance:testcase.LoginTest@1afd44cb]">testAddBackpackToCartAndCheckout</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a37dbf">  <td>25/07/16 07:39:15</td>   <td>-5670</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcase.LoginTest@1ab3a8c8]">&gt;&gt;setUp</td> 
+<tr bgcolor="a3cd93">  <td>25/07/20 11:28:01</td>   <td>10266</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcase.LoginTest@1afd44cb]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="defd9f">  <td>25/07/16 07:39:22</td>   <td>1933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testValidLogin()[pri:1, instance:testcase.LoginTest@1ab3a8c8]">testValidLogin</td> 
+<tr bgcolor="d46ab7">  <td>25/07/20 11:28:01</td>   <td>10236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testValidLogin()[pri:2, instance:testcase.LoginTest@1afd44cb]">testValidLogin</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
